feat: Add a background image to the contact page's hero section.

--- a/styles.css
+++ b/styles.css
@@ -536,6 +536,10 @@ section {
 }
 
 /* Contacto */
+.contacto-hero {
+  background-image: url(IMG/banner\ contactanos.png);
+}
+
 .contacto-section {
   background-color: var(--color-negro);
   padding: 8% 10%;
