--- a/styles.css
+++ b/styles.css
@@ -168,8 +168,7 @@ nav a.active::after {
 
 /* Detail Page Button */
 .detail-cta-button {
-  display: inline-block;
-  padding: 15px 60px;
+  padding: 15px 100px;
   background-color: #a62f2f;
   color: var(--color-blanco);
   text-decoration: none;
@@ -179,7 +178,6 @@ nav a.active::after {
   transition: background-color 0.3s;
   margin-top: 3%;
   font-size: 19px;
-  box-shadow: 0 4px 15px rgba(166, 47, 47, 0.4);
 }
 
 .detail-cta-button:hover {
@@ -420,6 +418,7 @@ section {
 }
 
 /* Detalle Producto */
+
 .detalle-hero {
   background-image: url(IMG/baner\ honey\ rojo.png);
   display: flex;
@@ -445,11 +444,10 @@ section {
 
 .detalle-info h1 {
   font-size: 80px;
-  line-height: 1;
+  line-height: 1.2;
   margin-bottom: 0;
   color: var(--color-beige);
-  text-transform: uppercase;
-  font-weight: 800;
+  font-weight: bold;
 }
 
 /* Apply opacity to 2nd and 3rd lines to simulate the gradient/fade effect */
@@ -606,7 +604,7 @@ section {
 }
 .experiencias-section {
   background-color: var(--color-negro);
-  padding: 8% 5%;
+  padding: 8% 5% 3%;
 }
 
 .experiencia-card {
@@ -720,7 +718,7 @@ section {
 /* Formulario Reservas */
 .reservas-section {
   background-color: var(--color-negro);
-  padding: 6% 10%;
+  padding: 0% 10% 6%;
   text-align: center;
   justify-content: center;
 }
